dataset1235/2025-2/1379599236/users/2397405626/executions/2936945225_1462915504.log
== SUBMISSION (2025-08-24 22:30:22)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*(tan(pi/5))))
area = (5/2)*lado*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o lado do pentagono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o lado do pentagono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o lado do pentagono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o lado do pentagono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o lado do pentagono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o lado do pentagono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:30:18)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*(tan(pi/5))))
area = (5/2)*lado*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o lado do pentagono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o lado do pentagono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o lado do pentagono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o lado do pentagono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o lado do pentagono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o lado do pentagono: 172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:29:21)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*(tan(pi/5))))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o lado do pentagono: 6.193718642120282
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o lado do pentagono: 4.129145761413521
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o lado do pentagono: 7.570100562591455
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o lado do pentagono: 5.505527681884695
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o lado do pentagono: 2.7527638409423476
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o lado do pentagono: 6.881909602355869
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:28:12)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*((pi)/5)))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o lado do pentagono: 7.16197243913529
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o lado do pentagono: 4.7746482927568605
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o lado do pentagono: 8.753521870054243
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o lado do pentagono: 6.366197723675814
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o lado do pentagono: 3.183098861837907
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o lado do pentagono: 7.957747154594767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:27:28)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*tan*((pi)/5)))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:25:47)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*tan*(math.pi/5)))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*(math.pi/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*(math.pi/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*(math.pi/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*(math.pi/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*(math.pi/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*(math.pi/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:26:31)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*tan*((math.pi)/5)))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((math.pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((math.pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((math.pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((math.pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((math.pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tan*((math.pi)/5)))
                          ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:27:14)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*((pi)/5)))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o lado do pentagono: 7.16197243913529
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o lado do pentagono: 4.7746482927568605
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o lado do pentagono: 8.753521870054243
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o lado do pentagono: 6.366197723675814
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o lado do pentagono: 3.183098861837907
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o lado do pentagono: 7.957747154594767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:24:53)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = (lado/(2*math.tan*(math.pi/5)))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*math.tan*(math.pi/5)))
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*math.tan*(math.pi/5)))
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*math.tan*(math.pi/5)))
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*math.tan*(math.pi/5)))
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*math.tan*(math.pi/5)))
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*math.tan*(math.pi/5)))
                       ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:25:22)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = (lado/(2*tan*(math.pi/5)))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*tan*(math.pi/5)))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*tan*(math.pi/5)))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*tan*(math.pi/5)))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*tan*(math.pi/5)))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*tan*(math.pi/5)))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = (lado/(2*tan*(math.pi/5)))
                     ~^~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:27:01)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*((math.pi)/5)))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*((math.pi)/5)))
                              ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*((math.pi)/5)))
                              ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*((math.pi)/5)))
                              ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*((math.pi)/5)))
                              ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*((math.pi)/5)))
                              ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*((math.pi)/5)))
                              ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 22:27:50)
-- CODE: 
from math import *

# faça seu código aqui!

lado = float(input("Digite o lado do pentagono: "))

apotema = float(lado/(2*tang*((pi)/5)))

print(apotema)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tang*((pi)/5)))
                            ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tang*((pi)/5)))
                            ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tang*((pi)/5)))
                            ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tang*((pi)/5)))
                            ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tang*((pi)/5)))
                            ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    apotema = float(lado/(2*tang*((pi)/5)))
                            ^^^^
NameError: name 'tang' is not defined. Did you mean: 'tan'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
